a little bit messed up :)

--- a/styles/prosilver/template/imprint.html
+++ b/styles/prosilver/template/imprint.html
@@ -21,4 +21,19 @@
             <span class="corners-bottom"><span></span></span></div>         
             </div>        
 
+                <div class="forabg">
+            <div class="inner"><span class="corners-top"><span></span></span>
+            <ul class="topiclist">
+                <li class="header">
+                    <dl class="icon">
+                        <dt>{L_IMPRINT_PAGE}</dt>
+                    </dl>
+                </li>
+            </ul>
+            <ul class="topiclist forums" style="padding: 0.05cm">
+            
+	          <li>{IMPRINT_CONTENT}</li>
+            </ul>
+            <span class="corners-bottom"><span></span></span></div>         
+            </div>
 <!-- INCLUDE overall_footer.html -->
